<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_category">Select Category</string>
    <string name="category">category</string>
    <string name="hot_sales">Hot sales</string>
    <string name="new_product">New</string>
    <string name="buy_now">Buy now!</string>
    <string name="best_seller">Best Seller</string>
    <string name="best_seller_picture">best seller picture</string>
    <string name="favorite">favorite</string>
    <string name="done">Done</string>
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="show_filter">show filter</string>
    <string name="explorer">⬤ Explorer</string>
</resources>