<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/ll_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_white"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/btn_filter_show"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:contentDescription="@string/show_filter"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_select_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro"
                android:text="@string/select_category"
                android:textColor="@color/dark_blue"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_filter_show" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingVertical="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_select_category"
                tools:listitem="@layout/category_item" />

            <TextView
                android:id="@+id/tv_hot_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro"
                android:text="@string/hot_sales"
                android:textColor="@color/dark_blue"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_select_category"
                app:layout_constraintTop_toBottomOf="@id/rv_categories" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_hot_sales"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_hot_sales" />

            <TextView
                android:id="@+id/tv_best_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mark_pro"
                android:text="@string/best_seller"
                android:textColor="@color/dark_blue"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_hot_sales"
                app:layout_constraintTop_toBottomOf="@id/vp_hot_sales" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_best_seller"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_best_seller"
                app:spanCount="2"
                tools:listitem="@layout/best_seller_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:gravity="center"
        android:id="@+id/ll_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_top_corners"
        android:backgroundTint="@color/dark_blue"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_weight="1.6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mark_pro"
            android:text="@string/explorer"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_shop_cart"
            android:layout_weight="1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_shop" />

        <ImageView
            android:layout_weight="1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_outlined_heart"
            app:tint="@color/white" />
        <ImageView
            android:layout_weight="1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_person" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

